Fix API token for influxdb The must generate all access API token from influxdb and provide to HA config via secrets or .env

--- a/kybfarm-docker-compose.yaml
+++ b/kybfarm-docker-compose.yaml
@@ -51,6 +51,7 @@ services:
     #   - DOCKER_INFLUXDB_INIT_PASSWORD=${DOCKER_INFLUXDB_INIT_PASSWORD:?error}
     #   - DOCKER_INFLUXDB_INIT_ORG=${DOCKER_INFLUXDB_INIT_ORG:?error}
     #   - DOCKER_INFLUXDB_INIT_BUCKET=${DOCKER_INFLUXDB_INIT_BUCKET:?error}
+    #   - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=${DOCKER_INFLUXDB_INIT_ADMIN_TOKEN:?error}
 
   tunnel:
     container_name: cloudflared_tunnel_kybfarm
