--- a/server/homeassistant/config/influxdb.yaml
+++ b/server/homeassistant/config/influxdb.yaml
@@ -2,7 +2,7 @@
   ssl: false
   host: !secret host_ip
   port: 8086
-  token: ${DOCKER_INFLUXDB_INIT_ADMIN_TOKEN:?error}
+  token: !secret influxdb_token # !env_var DOCKER_INFLUXDB_INIT_ADMIN_TOKEN
   organization: kybfarm
   bucket: FarmData
   tags:
