Update readme for initial setup after cloning repo

--- a/env_template.env
+++ b/env_template.env
@@ -8,10 +8,10 @@ DOCKER_INFLUXDB_INIT_ORG="org_name"
 HA_INFLUXDB_TOKEN="token_from_influxdb"
 
 # AppDaemon
-APPDAEMON_HA_URL="http://xx.xx.xx.xx:nnnn"
+HA_URL="http://xx.xx.xx.xx:nnnn"
 # Long-lived access token for AppDaemon integration with Home Assistant: https://developers.home-assistant.io/docs/auth_api/#long-lived-access-token
-APPDAEMON_TOKEN="token_from_HA"
+TOKEN="token_from_HA"
 
 
 # Cloudflare token for Docker installation of tunnel: https://developers.cloudflare.com/cloudflare-one/connections/connect-networks/get-started/create-remote-tunnel/
-CLOUDFLARE_TOKEN=token_from_cloudflare
+TUNNEL_TOKEN=token_from_cloudflare
