Change volume mount for configuration generator Mount directory not file The files will be generated from scratch anyways and doesn't have to exist

--- a/kybfarm-docker-compose.yaml
+++ b/kybfarm-docker-compose.yaml
@@ -6,13 +6,8 @@ services:
     build: server/src/config_generator
     volumes:
       - ./.env:/app/.env
-      - ./server/homeassistant/config/automations.yaml:/app/server/homeassistant/config/automations.yaml
-      - ./server/homeassistant/config/configuration.yaml:/app/server/homeassistant/config/configuration.yaml
-      - ./server/homeassistant/config/influxdb.yaml:/app/server/homeassistant/config/influxdb.yaml
+      - ./server/homeassistant/config:/app/server/homeassistant/config
       - ./server/src/config_generator/config_generator.py:/app/server/src/config_generator/config_generator.py
-    # env_file:
-    #  - .env
-
 
   homeassistant:
     container_name: homeassistant_kybfarm
