--- a/server/src/config_generator/configuration_template.yaml
+++ b/server/src/config_generator/configuration_template.yaml
@@ -39,7 +39,7 @@ mqtt:
       state_topic: {{MQTT_SENSOR_01_RES}}
       value_template: {{LIGHT_01_VALUE_TEMPLATE}}
       unit_of_measurement: {{LIGHT_01_HA_UNIT}}
-      icon: {{LIGHT_01_HA_ICON}}git
+      icon: {{LIGHT_01_HA_ICON}}
 
     - name: {{TEMPERATURE_11_NAME}}
       unique_id: {{TEMPERATURE_11_HA_ID}}
