--- a/server/src/config_generator/automations_template.yaml
+++ b/server/src/config_generator/automations_template.yaml
@@ -1,4 +1,38 @@
 # Automations
+- alias: {{SENSOR_01_REQ_AUTOMATION_ALIAS}}
+  description: ''
+  trigger:
+  - platform: time_pattern
+    seconds: /{{SENSOR_01_REQ_INTERVAL_SEC}}
+  condition: []
+  action:
+  - service: mqtt.publish
+    metadata: {}
+    data:
+      qos: 0
+      retain: false
+      topic: {{MQTT_SENSOR_01_REQ}}
+      payload: '{"req_topic": {{MQTT_SENSOR_01_REQ}}, "res_topic": {{MQTT_SENSOR_01_RES}},
+        "data": "ha_req" }'
+  mode: single
+
+- alias: {{PAR_02_REQ_AUTOMATION_ALIAS}}
+  description: ''
+  trigger:
+  - platform: time_pattern
+    seconds: /{{PAR_02_REQ_INTERVAL_SEC}}
+  condition: []
+  action:
+  - service: mqtt.publish
+    metadata: {}
+    data:
+      qos: 0
+      retain: false
+      topic: {{MQTT_PAR_02_REQ}}
+      payload: '{"req_topic": {{MQTT_PAR_02_REQ}}, "res_topic": {{MQTT_PAR_02_RES}},
+        "data": "ha_req" }'
+  mode: single
+
 - alias: {{SENSOR_11_REQ_AUTOMATION_ALIAS}} 
   description: ''
   trigger:
