--- a/server/src/config_generator/configuration_template.yaml
+++ b/server/src/config_generator/configuration_template.yaml
@@ -43,7 +43,7 @@ mqtt:
 
     - name: {{PAR_02_NAME}}
       unique_id: {{PAR_02_HA_ID}}
-      state_topic: {{MQTT_PAR_02_STATE}}
+      state_topic: {{MQTT_SENSOR_02_RES}}
       value_template: {{PAR_02_VALUE_TEMPLATE}}
       unit_of_measurement: {{PAR_02_HA_UNIT}}
       icon: {{PAR_02_HA_ICON}}
