--- a/edge/requirements.txt
+++ b/edge/requirements.txt
@@ -11,6 +11,7 @@ minimalmodbus==2.1.1
 paho-mqtt==1.6.1
 pyftdi==0.55.0
 pyserial==3.5
+python-dotenv==1.0.1
 pyusb==1.2.1
 rpi-ws281x==5.0.0
 RPi.GPIO==0.7.1
