--- a/server/src/config_generator/automations_template.yaml
+++ b/server/src/config_generator/automations_template.yaml
@@ -139,6 +139,13 @@
       value: Registered calibration for EC sensor 1 for 1413us/cm reference.
     target:
       entity_id: input_text.calibration_status
+  - service: mqtt.publish
+    metadata: {}
+    data:
+      qos: 0
+      retain: false
+      topic: {{MQTT_SENSOR_03_CMD}}
+      payload: '{ "cmd": "register_ec_1413"}'
   mode: single
 
 - alias: {{SENSOR_03_END_CALIBRATION_ALIAS}}
@@ -193,4 +200,11 @@
       value: Registered calibration for EC sensor 1 for 12880us/cm reference.
     target:
       entity_id: input_text.calibration_status
+  - service: mqtt.publish
+    metadata: {}
+    data:
+      qos: 0
+      retain: false
+      topic: {{MQTT_SENSOR_03_CMD}}
+      payload: '{ "cmd": "register_ec_12880"}'
   mode: single
