--- a/server/src/config_generator/automations_template.yaml
+++ b/server/src/config_generator/automations_template.yaml
@@ -105,6 +105,23 @@
       payload: '{"cmd": "off"}'
   mode: single
 
+- alias: {{SENSOR_03_REQ_AUTOMATION_ALIAS}}
+  description: ''
+  trigger:
+  - platform: time_pattern
+    seconds: /{{SENSOR_03_REQ_INTERVAL_SEC}}
+  condition: []
+  action:
+  - service: mqtt.publish
+    metadata: {}
+    data:
+      qos: 0
+      retain: false
+      topic: {{MQTT_SENSOR_03_REQ}}
+      payload: '{"req_topic": {{MQTT_SENSOR_03_REQ}}, "res_topic": {{MQTT_SENSOR_03_RES}},
+        "data": "ha_req" }'
+  mode: single
+
 - alias: {{SENSOR_03_INIT_CALIBRATION_1413_ALIAS}}
   description: ''
   trigger:
